@@ -1,7 +1,7 @@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
-includedir=@includedir@
+includedir=@includedir@/librsvg-1
 
 Name: librsvg
 Description: LGPL version of the librsvg library
